Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21124

QtCreator's (mercurial) hg diff does not provide side-by-side view

    XMLWordPrintable

Details

    • Linux/X11
    • 85a02fe8aa7d12f66c553081e5e0c0da86c185c3 (qt-creator/qt-creator/master)

    Description

      QtCreator's hg diff view does not provide side-by-side diff

      Tools -> Mercurial -> Diff 

      (Note: Tools -> Diff works properly to diff current unsaved file with side-by-side view)

      Tested in both Qt Creator 4.6.2 and 4.7.0, still not fix, searched this issue to be claimed solved in 4.3.0 but it's not in 4.6.2 and afterwards.

      Also test same tool environment to git diff which works properly.

      Attachments

        1. qtc462hgdiff.png
          175 kB
          Meng-Yen Li
        For Gerrit Dashboard: QTCREATORBUG-21124
        # Subject Branch Project Status CR V

        Activity

          People

            asit-dhal asit-dhal
            blazar0112 Meng-Yen Li
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes