DiffEditor: Diff editor for Mercurial

Fixes: QTCREATORBUG-21124
Change-Id: Ib823896bf1b22cc12e62a0526ad1987957c44a0e
Reviewed-by: Orgad Shaneh <orgads@gmail.com>